<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/location_details_back"
        android:layout_width="@dimen/app_button_back_size"
        android:layout_height="@dimen/app_button_back_size"
        android:layout_marginStart="@dimen/app_margin_base"
        android:background="@drawable/colored_button_oval_ripple"
        android:contentDescription="@string/description_button_back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@id/location_details_guideline_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_details_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_margin_base"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintBottom_toTopOf="@id/location_details_guideline_header"
        app:layout_constraintStart_toEndOf="@id/location_details_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Earth" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/location_details_guideline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/app_guideline_header_begin" />

    <ProgressBar
        android:id="@+id/location_details_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/characters_progress_height"
        android:layout_marginHorizontal="@dimen/app_margin_base"
        android:indeterminate="true"
        android:indeterminateTint="@color/app_green_light"
        android:indeterminateTintMode="src_in"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_details_guideline_header" />

    <TextView
        android:id="@+id/location_details_text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_margin_base"
        android:layout_marginTop="@dimen/app_margin_base"
        android:text="@string/message_error_reload"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_details_progress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location_details_button_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_base"
        android:background="@drawable/colored_button_ripple"
        android:minHeight="0dp"
        android:paddingHorizontal="@dimen/app_base_padding"
        android:paddingVertical="@dimen/app_button_padding_vertical"
        android:text="@string/app_reload_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/app_base_text_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_details_text_error" />

    <TextView
        android:id="@+id/location_details_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_base"
        android:layout_marginTop="@dimen/app_margin_base"
        android:text="@string/label_type"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_details_progress" />

    <TextView
        android:id="@+id/location_details_type_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_margin_base"
        android:layout_marginTop="@dimen/app_margin_base"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/location_details_type_label"
        app:layout_constraintTop_toBottomOf="@id/location_details_progress"
        tools:text="Planet" />

    <TextView
        android:id="@+id/location_details_dimension_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_base"
        android:layout_marginTop="@dimen/app_margin_base"
        android:text="@string/label_dimension"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_details_type_text" />

    <TextView
        android:id="@+id/location_details_dimension_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_margin_base"
        android:layout_marginTop="@dimen/app_margin_base"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/location_details_dimension_label"
        app:layout_constraintTop_toBottomOf="@id/location_details_type_text"
        tools:text="Dimension C-137" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/location_details_recycler_residents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/app_margin_base"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_details_dimension_text"
        tools:listitem="@layout/item_character" />

</androidx.constraintlayout.widget.ConstraintLayout>
